Future planned changes:
- screen saver
- editing files (hemingway and insert modes)
- Dirty Rat game
  - status bar
  - actual levels for the game (3x)
  - game logic (collecting floppies, exiting to next level)
  - dirt!

Current version changes:
0x0C:
  - introducion of DSKY input interface: VERB/NOUN
  - removal of old commands system (one letter)
0x0B:
- file system:
  - fixed files positions and size (8K)
  - added change log as file3
  - fixed CHS values
  - full printer support
    - printer initialization
    - print one char
    - print a string (Welcome message)
    - print current buffer
  - Dirty Rat game
    - better broom random movement
      system for drawing levels (walls, elements)
  - changed kernel version naming to hexadecimal numbers - it's no longer alpha!
0x0A:
  - progress on Dirty Rat game
    - drawing one test level
    - player movement
    - rando broom movement
  - bugfixes, checks, stability testing
  - show/hide cursor (shell/game)
  - updated logo (removed 16bit part)

Released versions:
alpha9 [RELEASED]:
  - start of a Dirty Rat mini game
  - initial printing support (theoretical)
  - list and select files to read/write
  - updated sample files with ASCII Art Gallery and Notepad (for future edits)
  - removed toolbar
  - reduced and rearanged tileset to work with any EGA/VGA (no 1px gaps)
  - working no-gap tiles on all text modes!
alpha8:
  - new mascot
  - lot of bugfixes
  - updated status [s] reporting (date/battery/mouse)
  - refactored toolbar backend with secondary menus
  - code golf and optimizations
  - cpuid added with fallback for 386
  - updated logo
  - splash screen
alpha7 [RELEASED]:
  - file system bugfixes
  - ruler in file display
  - state machine implementation
  - shell and edit states
alpha6:
  - basic file system implementation:
      - read file from disk to buffer
      - display buffer
      - write buffer to the disk
  - example file on floppy
  - clean up, refactor
alpha5: